cc_test(
    name = "test",
    size = "small",
    srcs = ["solution.cc"],
    deps = [
        "//src:util",
        "//src:main",
        "@googletest//:gtest",
        "@abseil//absl/flags:flag",
        "@abseil//absl/flags:parse",
    ],
    data = [":test_cases.yml"],
    args = [
        "--test_cases=$(location :test_cases.yml)",
    ],
)
